# tauri-app

./: .env  .gitignore  codegen.yml  config-overrides.js  graphql.config.json  package-lock.json  package.json  tsconfig.json
data/: schema.graphql
public/: index.html
src/: App.tsx  actionType.ts  index.css  index.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cmd.rs  datastore.rs  event.rs  lib.rs  main.rs  oracle.rs
src-tauri/src/cmd/: oracle_handler.rs  rocksdb_handler.rs
src-tauri/src/core/: db_schema_processor.rs  formatter.rs  java_props.rs  log.rs  mod.rs  oracle_client.rs  oracle_param_mapper.rs  parameter_iterator.rs  postgres_param_mapper.rs  query_scanner.rs  result_diff.rs  sql_common.rs  xml_parser.rs
src-tauri/src/entity/: data_table.rs  mod.rs
src-tauri/src/graphql/: app_state.rs  db_schema.rs  java_props.rs  log.rs  main.rs  mod.rs  rocksdb.rs  sql.rs  sql_explain.rs  sql_formatter.rs
src-tauri/src/handlers/: formatter.rs  fs.rs  graphql.rs  java_props.rs  log.rs  mod.rs  oracle.rs  oracle_handler.rs  postgres.rs  query_runner.rs  rocksdb.rs  rocksdb_handler.rs  sql.rs
src-tauri/src/proxies/: app_state.rs  db_explain_tree.rs  db_schema.rs  dirs.rs  fs.rs  java_props.rs  mod.rs  oracle.rs  oracle_proxy.rs  postgres.rs  query_runner.rs  query_runner_stream.rs  rocksdb.rs  rocksdb_proxy.rs  sql_common.rs  sql_proxy.rs
src-tauri/src/schemas/: mod.rs
src-tauri/src/state/: mod.rs
src-tauri/src/utilities/: mod.rs  oracle.rs  postgres.rs
src/actions/: index.ts
src/apis/: dataStore.ts  duration.ts  formatter.ts  fs.ts  index.ts  javaProps.ts  log.ts  oracle.ts  postgres.ts  queryRunner.ts  sqlCommon.ts
src/apis/graphql/: appState.graphql  dbExplain.graphql  dbSchema.graphql  dbSchema.ts  generated.graphql  index.ts  javaProps.graphql  log.graphql  rocksdb.graphql  sql.graphql  sql.ts  sqlFormat.graphql  testSub.graphql
src/components/: ClassSelect.tsx  CopyDialog.tsx  DBSettings.tsx  DataTable.tsx  DiffEditor.tsx  DiffToolbar.tsx  Editor.tsx  EditorToolBar.tsx  ErrorBoundary.tsx  ExitDialog.tsx  LabelWithDbIcons.tsx  LabelWithIcon.tsx  LoadingPage.tsx  MatchText.tsx  ParameterEditor.tsx  PathBreadcrumbs.tsx  ProcessIconButton.tsx  ProgressIconButton.tsx  ProgressSplitIconButton.tsx  PropNameList.tsx  QueryParameterModal.tsx  QueryTable.tsx  RunnerStatusBar.tsx  SVGIcon.tsx  SaveDialog.tsx  SchemaDropdown.tsx  SearchBar.tsx  Settings.tsx  SettingsPanelBase.tsx  SideBar.tsx  SideBarIcon.tsx  SplitEditor.css  SplitEditor.tsx  SplitQueryTable.tsx  SplitRunningPanel.tsx  TabContent.tsx  Tooltip.tsx  TreeNode.tsx  data_table.css
src/containers/: ContextMenu.tsx  DiffEditor.tsx  Navigator.tsx  Notification.tsx  QueryRunner.tsx  Root.tsx  SettingsContainer.tsx
src/core/: databaseConsole.ts  dbResultDiff.ts  formatter.ts  javaProperties.ts  logger.ts  oracle.ts  paramStore.ts  parameterEvaluator.ts  postgres.ts  propertiesLoader.ts  queryRunner.ts  resultDiffer.ts  xmlParser.ts  xmlProcessor.ts
src/features/databaseConsole/: DatabaseConsoleToolBar.tsx  DatabaseConsoleView.tsx  databaseConsoleSlice.ts
src/features/dbExplain/: DBExplainTreeNode.tsx  DBExplainTreeView.tsx  DBExplainView.tsx
src/features/editorSettings/: EditorSetttinsPanel.tsx  editorSettingsSlice.ts
src/features/graphql/: GraphqlView.tsx
src/features/propsEditor/: ClassSelectView.tsx  EditorToolBarView.tsx  PathBarView.tsx  PropNameListView.tsx  PropsEditorView.tsx  PropsListView.tsx  PropsSearchView.tsx  SplitEditorView.tsx  propsEditorSlice.ts
src/features/queryScan/: QueryScanModal.tsx  SchemaSelect.tsx  queryScanSlice.ts
src/features/runnerControl/: RunnerControlToolBar.tsx  runnerControlSlice.ts
src/features/runnerResult/: RunnerResultPanel.tsx  SchemaSelect.tsx  runnerResultSlice.ts
src/features/schemaEditor/: SchemaEditorView.tsx  (+5 more)
src/hooks/: useAppState.ts  useIsMounted.ts
src/reducers/: editor.ts  index.ts  navigator.ts  notification.ts  queryRunner.ts  search.ts  settings.ts
src/util/: index.ts  monaco.ts
typings/: index.d.ts
(+4 files in other folders)
