[package]
name = "APDatabaseDevTool"
version = "0.1.0"
description = "AP Database Dev Tool"
authors = [ "you" ]
license = ""
repository = ""
default-run = "APDatabaseDevTool"
edition = "2018"
build = "src/build.rs"

[dependencies]
dirs = "4.0.0"
serde_json = "1.0.68"
serde = { version = "1.0.130", features = [ "derive" ] }
tauri = { version = "1.0.0-beta.8", features = ["api-all"] }
uuid = "0.8.2"
rocksdb = "0.16.0"
anyhow = "1.0.44"
oracle = { version = "0.5.3", features = [ "chrono" ] }
regex = "1.5.4"
tokio-stream = "0.1.7"
tokio-postgres = { version = "0.7.2", features = [ "with-uuid-0_8", "with-chrono-0_4" ] }
tokio = { version = "1.11.0", features = [ "full" ] }
log = "0.4.14"
fern = "0.6.0"
chrono = "0.4.19"
glob = "0.3.0"
lazy_static = "1.4.0"
futures = "0.3.17"
sqlformat = "0.1.8"
juniper = "0.15.5"
juniper_graphql_ws = "0.2.4"
juniper_warp = {version = "0.6.3", features = ["subscriptions"] }
warp = "0.3.1"
async-graphql = "2.10.0"
async-graphql-warp = "2.10.0"


[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[features]
custom-protocol = [ "tauri/custom-protocol" ]
default = [ "custom-protocol" ]

[lib]
name = "mylib"
path = "src/lib.rs"

[[bin]]
name = "APDatabaseDevTool"
path = "src/main.rs"
