[package]
name = "ap_database_dev_tool"
version = "0.1.0"
description = "AP Database Dev Tool"
authors = ["you"]
license = ""
repository = ""
default-run = "ap_database_dev_tool"
edition = "2018"
build = "src/build.rs"

[dependencies]
dirs = "4.0.0"
serde_json = "1.0.68"
serde = { version = "1.0.130", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = ["api-all"] }
uuid = "0.8.2"
rocksdb = "0.17.0"
anyhow = "1.0.44"
oracle = { version = "0.5.3", features = ["chrono"] }
regex = "1.5.4"
tokio-stream = "0.1.7"
tokio-postgres = { version = "0.7.2", features = [
    "with-uuid-0_8",
    "with-chrono-0_4",
] }
tokio = { version = "1.11.0", features = ["full"] }
log = "0.4.14"
fern = "0.6.0"
chrono = "0.4.19"
glob = "0.3.0"
lazy_static = "1.4.0"
futures = "0.3.17"
sqlformat = "0.1.8"
warp = "0.3.2"
async-graphql = "3.0.6"
async-graphql-warp = "3.0.6"
async-trait = "0.1.51"


[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]

[lib]
name = "mylib"
path = "src/lib.rs"

[[bin]]
name = "graphql_server"
path = "src/graphql/main.rs"

[[bin]]
name = "ap_database_dev_tool"
path = "src/main.rs"
