[package]
name = "ap_database_dev_tool"
version = "0.1.0"
description = "AP Database Dev Tool"
authors = ["you"]
license = ""
repository = ""
default-run = "ap_database_dev_tool"
edition = "2018"
build = "src/build.rs"

[dependencies]
dirs = "4.0.0"
serde_json = "1.0.68"
serde = { version = "1.0.130", features = ["derive"] }
tauri = { version = "1.0.0-rc.11", features = ["api-all"] }
uuid = {version = "1.0.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
rocksdb = "0.18.0"
anyhow = "1.0.51"
oracle = { version = "0.5.3", features = ["chrono"] }
regex = "1.5.4"
tokio-stream = "0.1.8"
tokio-postgres = { version = "0.7.6", features = [
    "with-uuid-1",
    "with-chrono-0_4",
] }
tokio = { version = "1.15.0", features = ["full"] }
log = "0.4.14"
fern = "0.6.0"
chrono = "0.4.19"
glob = "0.3.0"
lazy_static = "1.4.0"
futures = "0.3.19"
sqlformat = "0.2.0"
warp = "0.3.2"
async-graphql = "4.0.0"
async-graphql-warp = "4.0.0"
crossbeam = "0.8.1"

[build-dependencies]
tauri-build = { version = "1.0.0-rc.9", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]

[lib]
name = "mylib"
path = "src/lib.rs"

[[bin]]
name = "graphql_server"
path = "src/graphql/main.rs"

[[bin]]
name = "ap_database_dev_tool"
path = "src/main.rs"
